--- a/wms.html
+++ b/wms.html
@@ -17,26 +17,27 @@
     <script type="text/javascript">
 	
 	var layers = [
+       
         new ol.layer.Tile({
-          source: new ol.source.OSM()
-        }),
-        new ol.layer.Tile({
-          extent: [-13884991, 2870341, -7455066, 6338219],
+          //extent: [-13884991, 2870341, -7455066, 6338219],
           source: new ol.source.TileWMS({
-            url: 'https:/localhost:8080/geoserver/wms',
-            params: {'LAYERS': 'topp:states', 'TILED': true},
+            url: 'http://localhost:8080/geoserver/worldmap/wms',
+            params: {'LAYERS': 'worldmap', 'TILED': true, "SRS":"EPSG:3857"},
             serverType: 'geoserver',
             // Countries have transparency, so do not fade tiles:
             transition: 0
           })
         })
+		
       ];
       var map = new ol.Map({
         layers: layers,
         target: 'map',
         view: new ol.View({
-          center: ol.proj.fromLonLat([127, 38]),
-          zoom: 4
+          center: [100000000, 5000000]
+		  //ol.proj.fromLonLat([127, 38])
+		  ,
+          zoom: 2
         })
       });
 	
